# caliburn

./: .gitignore  LICENSE  LICENSE.txt  README.md  caliburn.cpp  caliburn.h  caliburn.sln  example  example.cbrn
compiler/: CMakeLists.txt  CMakePresets.json  allasm.h  assembler.cpp  assembler.h  assignstmnt.h  ast.h  basic.h  buffer.h  caliburn.cpp  caliburn.h  cbir.h  cbirasm.h  cbrn_std.h  cfg.cpp  cfg.h  cinq.h  classstmt.h  cllr.h  cllrasm.cpp  cllrasm.h  cllropt.cpp  cllrout.h  cllrspirv.cpp  cllrspirv.h  cllrvalid.cpp  cllrvalid.h  compiler.h  compiler.vcxproj  compiler.vcxproj.filters  compilererr.h  ctrlstmnt.h  ctrlstmt.cpp  ctrlstmt.h  deftypes.cpp  deftypes.h  expr.txt  fieldstmnt.h  floattype.cpp  fn.h  (+63 more)
compiler/include/: basic.h  buffer.h  caliburn.h  cinq.h  compilererr.h  deftypes.h  error.h  langcore.h  parser.h  strhelp.h  syntax.h  tokenizer.h
compiler/include/ast/: ast.h  basetypes.h  classstmt.h  ctrlstmt.h  fn.h  fnstmt.h  funcstmt.h  generics.h  miscstmt.h  modstmts.h  module.h  rootmod.h  scopestmt.h  setstmt.h  shaderstmt.h  stdlib.h  structstmt.h  symbols.h  type.h  typestmt.h  valstmt.h  values.h  var.h  varstmt.h
compiler/include/cbir/: cbir.h
compiler/include/cllr/: cllr.h  cllrasm.h  cllrfind.h  cllropt.h  cllrout.h  cllrtype.h  cllrtypeimpl.h  cllrtypes.h  cllrvalid.h
compiler/include/spirv/: cllrspirv.h  spirv.h  spirvasm.h  spirvconst.h  spirvio.h  spirvtype.h
compiler/include/types/: cbrn_std.h  type.h  typearray.h  typebool.h  typefloat.h  typeint.h  typestruct.h  typetex.h  typevector.h  typevoid.h
compiler/src/: caliburn.cpp  error.cpp  langcore.cpp  main.cpp  parser.cpp  strhelp.cpp  syntax.cpp  tokenizer.cpp
compiler/src/ast/: ast.cpp  basetypes.cpp  ctrlstmt.cpp  fn.cpp  generics.cpp  scopestmt.cpp  setstmt.cpp  shaderstmt.cpp  symbols.cpp  type.cpp  values.cpp  var.cpp
compiler/src/cllr/: cllr.cpp  cllrasm.cpp  cllrfind.cpp  cllropt.cpp  cllrtype.cpp  cllrtypes.cpp  cllrvalid.cpp
compiler/src/spirv/: cllrspirv.cpp  spirvasm.cpp  spirvconst.cpp  spirvio.cpp  spirvtype.cpp
compiler/src/types/: type.cpp  typearray.cpp  typebool.cpp  typefloat.cpp  typeint.cpp  typestruct.cpp  typetex.cpp  typevector.cpp  typevoid.cpp
compiler/tests/: tokenizer_tests.cpp
prototyping/: main.py  parser.py  prototyping.pyproj  spirv.py  syntax.py  test.txt
